<resources>
    <string-array name="Gender">
        <item>Female</item>
        <item>Male</item>

    </string-array>
    <string-array name="TypeTrip">
        <item>Public</item>
        <item>Friends</item>
    </string-array>

    <string-array name="cartype">
        <item>Sedan</item>
        <item>Truck</item>
        <item>Motorbike,Scooter</item>
        <item>Van</item>
        <item>Bus</item>
    </string-array>

    <string-array name="Add_pic">
        <item></item>
        <item>Change Profile Picture</item>
        <item>Delete Profile picture</item>


    </string-array>

    <string-array name="Setings">
        <item>Language</item>
        <item>Contact Us</item>
        <item>About</item>
    </string-array>
    <string-array name="AcountSetings">
        <item>Change Password</item>
        <item>Change User Name</item>
        <item>Change Phone number </item>
        <item>Block User</item>
        <item>Delete This Account</item>
    </string-array>


    <string name="title_home">Trajets</string>
    <string name="title_Profile">Profile</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_message">Message</string>


    <string name="title_activity_login">Sign in</string>
    <string name="app_name">Covoiturage</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login_1">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered  now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email to sent you password reset instructions.</string>
    <string name="title_activity_profile_info_">profile_info_Activity</string>
    <string name="title_activity_complete_profile">CompleteProfileActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="age">Age</string>
    <string name="phone">phone</string>
    <string name="full_name">full name</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="notification">Notification</string>
    <string name="trajets">Trajets</string>
    <string name="message">Message</string>
    <string name="verifier">verifier</string>
    <string name="e_mail_and_mobile_not_verified">E-mail and Mobile not verified</string>
    <string name="verify_now">verify Now !</string>
    <string name="verify_your_account_now">verify your account now</string>
    <string name="user_name">User name</string>
    <string name="title_activity_validation_emailphonenumber">validation_emailphonenumber</string>
    <string name="resend_verification_email">Resend verification email</string>
    <string name="phone_number">Phone number :</string>
    <string name="send_verification_code">send verification Code</string>
    <string name="validation_account">Validation Account</string>
    <string name="e_mail">E-mail :</string>
    <string name="e_mail_is_verified">E-mail is verified</string>
    <string name="verification_code">Verification Code</string>
    <string name="code_pin">Code pin</string>
    <string name="verify">Verify</string>
    <string name="phone_numberr">Phone number</string>
    <string name="_213">+213</string>
    <string name="login">Login</string>
    <string name="fullname">Fullname</string>
    <string name="signout">Signout</string>
    <string name="add_car">Add car</string>
    <string name="addcar">add car</string>
    <string name="save">Save</string>
    <string name="marque">Marque</string>
    <string name="matricule_de_voiture">Matricule de Voiture</string>
    <string name="numcartegrise">numcartegrise</string>
    <string name="brand">brand</string>
    <string name="add_trip">Add Trip</string>
    <string name="search_a_trip">Search A trip</string>
    <string name="search_trip">Search trip</string>
    <string name="confirmpassword">confirmpassword</string>
    <string name="car_type">Car Type :</string>
    <string name="num_ro_cartegrise">Numéro CarteGrise :</string>
    <string name="carpooling_also_car_sharing_ride_sharing_and_lift_sharing_is_the_sharing_of_car_journeys_so_that_more_than_one_person_travels_in_a_car_and_prevents_the_need_for_others_to_have_to_drive_to_a_location_themselves">
      Edini m3ak Is   Carpooling Application (also car-sharing, ride-sharing and lift-sharing) is the sharing of car
        journeys so that more than one person travels in a car,
        and prevents the need for others to have to drive to a location themselves.</string>
    <string name="signup">Signup</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New password</string>
    <string name="new_user_name">New User Name</string>
    <string name="old_user_name">Old User Name</string>
    <string name="old_phone_number">Old Phone Number :</string>
    <string name="new_phone_number">New Phone Number :</string>
    <string name="send_pincode">Send pincode</string>
    <string name="delete_account">Delete Account</string>
    <string name="enter_your_email_adress_here">Enter your Email adress here</string>
    <string name="enter_your_report_message_here">Enter your Report Message Here</string>
    <string name="ceo_phone"> Ceo Phone : </string>
    <string name="farouk_benarous26_gmail_com"> farouk.benarous26@gmail.com</string>
    <string name="_213556203130"> +213556203130</string>
    <string name="email_ceo">Email Ceo : </string>
    <string name="save_trip">Save_Trip</string>
    <string name="save_tripp">Save trip</string>
    <string name="add_cara">Add Car</string>
    <string name="price_dz">Price DZ</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="requests">Requests</string>

</resources>
