<?xml version="1.0" encoding="utf-8"?>
<LinearLayout   xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.example.sony.tabhost.ContactUs">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >


    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/email_ceo"
    android:textColor="#000"
    android:textSize="20sp"
    />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="  "
            />
    <com.github.rubensousa.raiflatbutton.RaiflatButton
        android:id="@+id/emailceo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:onClick="MsgCeo"
        android:text="@string/farouk_benarous26_gmail_com"
        android:textAllCaps="false"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:textColor="#000"
        android:textStyle="bold"

        />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >

 <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ceo_phone"
        android:textColor="#000"
        android:textSize="20sp"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="  "
            />

        <com.github.rubensousa.raiflatbutton.RaiflatButton
        android:id="@+id/callceo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:textColor="#000"
        android:textStyle="bold"
        android:onClick="CallCeo"
        android:text="@string/_213556203130"
        android:textAllCaps="false"
             />
    </LinearLayout>



</LinearLayout>
